# lbsim

./: CMakeLists.txt  Readme.md  lbm.cpp
cuda/: CMakeLists.txt  lbm_cuda.cu
include/: Boundary.hpp  Definitions.hpp  Initialize.hpp  Matrix.hpp  Processes.hpp  Utils.hpp
src/: Boundary.cpp  Case.cpp  Initialize.cpp  Lbmcuda.cu  Processes.cpp
